# rust-test-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/swapi/: mod.rs
src/swapi/people/: clients.rs  mod.rs  person.rs
src/swapi/vehicles/: mod.rs  vehicle.rs
