[package]
name = "rust-test-api"
version = "0.1.0"
authors = ["Adrian Johnson <zephyr1914@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
openssl = { version = "0.10.29", features = ["vendored"] }
time = { version = "0.2", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]